# nl-positivity-cc

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md
apps/: CMakeLists.txt  run.cc
include/nl_positivity/: grand_inequalities.h
src/: CMakeLists.txt  grand_inequalities.cc
tests/: CMakeLists.txt  test_nl_positivity.cc
